objects/ssot__HealthcareProviderService__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderObject__c</fullName>
        <label>Healthcare Provider Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareServiceId__c</fullName>
        <label>Healthcare Service</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Provider Service Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEffectiveFromDate__c</fullName>
        <label>Service Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEffectiveToDate__c</fullName>
        <label>Service Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275554512_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderService_Healthcare_rel</label>
        <referenceTo>ssot__HealthcareService__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderService_Healthcare_rel</relationshipLabel>
        <relationshipName>rel_1742275554512_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275564938_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderService_Healthcare_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderService_Healthcare_rel</relationshipLabel>
        <relationshipName>rel_1742275564938_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>